--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,35 @@
 <!-- Nav Bar -->
-<div>
-  <h1>Hello World, this is Teja Bolem</h1>
+<div class="navbar">
+  <img src="assets/logo.png" alt="logo">
+  <div class="nav-links">
+    <a href="">Home</a>
+    <a href="">About me</a>
+    <a href="">Contact</a>
+  </div>
 </div>
+
+<div class="welcome">
+  <video src="assets/Videos/bg-vid.mp4" muted loop autoplay playsinline></video>
+  <div class="overlay-text">
+    <h2>Hello There, </h2>
+    <h2>This is Teja Bolem</h2>
+    <p id="job-title">I am Sr. Full Stack Developer</p>
+  </div>
+</div>
+
+<!--<div class="intro">-->
+<!--  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's-->
+<!--    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a-->
+<!--    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,-->
+<!--    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing-->
+<!--    Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of-->
+<!--    Lorem Ipsum.</p>-->
+<!--</div>-->
+
+
+
+
+
+
+
+
