--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,3 +1,60 @@
-h1
-  font-size: 2rem
+.navbar
+  display: flex
+  flex-direction: row
+  justify-content: space-around
+  align-content: center
+  background-color: #80ffaa
+  padding: 2px
+  img
+    width: 12vw
+    height: 8vh
+  .nav-links
+    display: flex
+    flex-direction: row
+    justify-content: space-evenly
+    align-content: center
+    width: 50%
+    a
+      text-decoration: none
+      color: white
+      background-color: #ff944d
+      padding: 5px 10px
+      border-radius: 5px
+      font-weight: bold
+
+.welcome
+  position: relative
+  overflow: hidden
+  padding: 25px
+  width: 100%
+  video
+    width: 100%
+    height: auto
+    display: block
+    border-radius: 10px
+  .overlay-text
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    h2
+      font-weight: bold
+      font-size: 2vw
+
+/* Media query for smaller screens */
+@media (max-width: 768px)
+.welcome
+  width: 100%
+.overlay-text
+  font-size: 8vw
+  border-radius: 4vw
+
+#job-title
+  color: white
   font-weight: bolder
+  font-size: 3vw
+
+.intro
+  margin: 20px
+  background-color: #2F5061
+  color: white
