welcome made clean

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,32 @@
 <!-- Nav Bar -->
-<div class="navbar">
-  <img src="assets/logo.png" alt="logo">
+<div class="navbar" id="home">
+  <h1 href="#home">Teja Bolem</h1>
   <div class="nav-links">
-    <a href="">Home</a>
-    <a href="">About me</a>
-    <a href="">Contact</a>
+    <a href="#home">Home</a>
+    <a href="#about-me">About me</a>
+    <a href="#contact">Contact</a>
   </div>
 </div>
 
 <div class="welcome">
-  <video src="assets/Videos/bg-vid.mp4" muted loop autoplay playsinline></video>
-  <div class="overlay-text">
-    <h2>Hello There, </h2>
-    <h2>This is Teja Bolem</h2>
-    <p id="job-title">I am Sr. Full Stack Developer</p>
+  <div class="wel-text">
+  <h2>Hello, there</h2>
+  <h2>This is Teja Bolem</h2>
+  <h1 id="job-title">I am a Sr. Full Stack Java Developer</h1>
   </div>
+  <img src="assets/my-pic.jpg" alt="my picture">
 </div>
 
-<!--<div class="intro">-->
+<!--<div class="intro" id="about-me">-->
+<!--  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's-->
+<!--    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a-->
+<!--    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,-->
+<!--    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing-->
+<!--    Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of-->
+<!--    Lorem Ipsum.</p>-->
+<!--</div>-->
+
+<!--<div class="intro" id="contact">-->
 <!--  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's-->
 <!--    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a-->
 <!--    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,-->
