started about-me

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,30 +10,40 @@
 
 <div class="welcome">
   <div class="wel-text">
-  <h2>Hello, there</h2>
-  <h2>This is Teja Bolem</h2>
-  <h1 id="job-title">I am a Sr. Full Stack Java Developer</h1>
+    <h2>Hello, There!</h2>
+    <h2>This is Teja Bolem</h2>
+    <h1>I am a Sr. Full Stack Java Developer</h1>
   </div>
   <img src="assets/my-pic.jpg" alt="my picture">
 </div>
 
-<!--<div class="intro" id="about-me">-->
-<!--  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's-->
-<!--    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a-->
-<!--    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,-->
-<!--    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing-->
-<!--    Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of-->
-<!--    Lorem Ipsum.</p>-->
-<!--</div>-->
+<div class="intro">
+  <div class="intro-matter" id="about-me">
+    <h1>About Me</h1>
+    <p>
+      I am a seasoned  <b>Senior Full Stack Java Developer</b> with a rich background spanning 8 years in the software development
+      industry. My passion lies in crafting robust and scalable solutions that bridge the gap between intricate backend
+      logic and seamless user experiences.
+    </p>
 
-<!--<div class="intro" id="contact">-->
-<!--  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's-->
-<!--    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a-->
-<!--    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,-->
-<!--    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing-->
-<!--    Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of-->
-<!--    Lorem Ipsum.</p>-->
-<!--</div>-->
+    <p>
+      Throughout my career, I have honed my expertise in Java technologies, mastering both frontend and backend
+      development. My proficiency extends to designing and implementing complex systems that meet business objectives with
+      efficiency and precision.
+    </p>
+
+    <p>
+      My skill set encompasses the entire software development life cycle, from conceptualization and architecture to
+      implementation, testing, and deployment. I take pride in writing clean, maintainable code and have a keen eye for
+      optimizing performance.
+    </p>
+
+    <p>
+      Let's connect and explore how my experience and passion for innovation can bring value to your team or project.
+    </p>
+  </div>
+</div>
+
 
 
 
