--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Nav Bar -->
 <div class="navbar" id="home">
-  <h1 href="#home">Teja Bolem</h1>
+  <h1 id="grad" href="#home">Teja Bolem</h1>
   <div class="nav-links">
     <a href="#home">Home</a>
     <a href="#about-me">About me</a>
@@ -10,45 +10,37 @@
 
 <div class="welcome">
   <div class="wel-text">
-    <h2>Hello, There!</h2>
-    <h2>This is Teja Bolem</h2>
-    <h1>I am a Sr. Full Stack Java Developer</h1>
+    <h2>Hello, There!<br>This is Teja Bolem</h2>
+    <h1>I am a<br> Sr. Full Stack Java Developer</h1>
   </div>
-  <img src="assets/my-pic.jpg" alt="my picture">
+  <div class="welcome-img">
+    <img src="assets/my-pic.jpg" alt="my picture">
+  </div>
 </div>
 
 <div class="intro">
-  <div class="intro-matter" id="about-me">
-    <h1>About Me</h1>
-    <p>
-      I am a seasoned  <b>Senior Full Stack Java Developer</b> with a rich background spanning 8 years in the software development
-      industry. My passion lies in crafting robust and scalable solutions that bridge the gap between intricate backend
-      logic and seamless user experiences.
-    </p>
-
-    <p>
-      Throughout my career, I have honed my expertise in Java technologies, mastering both frontend and backend
-      development. My proficiency extends to designing and implementing complex systems that meet business objectives with
-      efficiency and precision.
-    </p>
-
-    <p>
-      My skill set encompasses the entire software development life cycle, from conceptualization and architecture to
-      implementation, testing, and deployment. I take pride in writing clean, maintainable code and have a keen eye for
-      optimizing performance.
-    </p>
-
-    <p>
-      Let's connect and explore how my experience and passion for innovation can bring value to your team or project.
-    </p>
+  <div class="intro-svg">
+    <img src="assets/multitasking.svg" alt="person-svg">
   </div>
+  <div class="intro-matter" id="about-me">
+    <h1>About me</h1>
+    <ul>
+      <p>
+        I am a seasoned <b>Senior Full Stack Java Developer</b> with a rich background spanning 8 years in the software
+        development
+        industry. My passion lies in crafting robust and scalable solutions that bridge the gap between intricate
+        backend
+        logic and seamless user experiences.
+      </p>
+
+      <p>
+        Let's connect and explore how my experience and passion for innovation can bring value to your team or project.
+      </p>
+    </ul>
+  </div>
+  
 </div>
-
-
-
-
-
-
-
-
-
+<!-- 
+<footer>
+  <img src="assets/footer.png">
+</footer> -->
