--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Nav Bar -->
 <div class="navbar" id="home">
-  <h1 id="grad" href="#home">Teja Bolem</h1>
+  <h1 href="#home">Teja Bolem</h1>
   <div class="nav-links">
     <a href="#home">Home</a>
     <a href="#about-me">About</a>
@@ -42,9 +42,29 @@
 
 </div>
 
-<footer>
+<!-- <div class="contact" id="contact">
+  <div class="contact-details">
+    <h1>Contact</h1>
+    <div>
+      <label>Email: </label><br>
+      <a href="mailto:tejabolem25@gmail.com">tejabolem25{{ '@' }}gmail.com</a>
+    </div>
+    <div><label>Phone: </label><br>
+      <a href="tel:+7326608211">+1 732-660-8211 </a>
+    </div>
+    <div>
+      <label>Location: </label>
+      <address>Gaithersburg, MD</address>
+    </div>
+  </div>
+  <div class="contact-svg">
+    <img src="assets/contact.svg" alt="person-svg">
+  </div>
+</div> -->
+
+<!-- <footer>
   <img src="assets/footer.png">
-  <div class="footer-float">
+  <div class="footer-float">:
     <div class="footer-links">
       <a href="https://www.linkedin.com/in/tbolem25/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
           fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
@@ -57,12 +77,35 @@
             d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8" />
         </svg> Github</a>
     </div>
-    <div class="other-links">
-      <a href="#">Home</a>
-      <a href="#">Home</a>
-      <a href="#">Home</a>
-      <a href="#">Home</a>
+    <div class="footer-links">
+      <a href="#home">Home</a>
+      <a href="#about-me">About</a>
+      <a href="#contact">Contact</a>
     </div>
   </div>
 
 </footer>
+
+footer
+  width: 100%
+  height: auto
+  position: relative
+  img
+    width: 100%
+    height: 40vh
+    object-fit: fill
+  .footer-float
+    width: 100%
+    display: flex
+    justify-content: space-around
+    position: absolute
+    bottom: 0
+    left: 0
+    a
+      text-decoration: none
+      color: Black
+      font-weight: bold
+    .footer-links
+      display: flex
+      flex-direction: column
+      padding: 60px 100px 20px -->
