--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -2,13 +2,12 @@
   // top: 0
   // background-color: white
   // position: sticky 
-  width: 80%
+  width: 90%
   display: flex
   flex-direction: row
   align-content: center
   justify-content: space-between
   margin: auto
-  
   h1
     background: linear-gradient(to right, #30CFD0 0%, #330867 100%)
     background-clip: text
@@ -16,12 +15,14 @@
     font-family: Jenthill, sans-serif
     margin-left: 5px
     font-size: 2vw
+    text-align: center
+    margin: auto 
   .nav-links
     display: flex
     flex-direction: row
     justify-content: space-evenly
     align-content: center
-    width: 50%
+    width: 60%
     background-color: #52D3D8
     border-radius: 5px
     padding: 5px 10px
@@ -36,12 +37,28 @@
       background-color: white
       color: #3498db
       border: 10px
+@media screen and (max-width: 600px)
+  .navbar
+    display: flex
+    flex-direction: column
+    justify-content: center
+    flex-wrap: wrap
+    h1
+      margin: 5px 5px 10px
+    .nav-links
+      width: 80%  
+      padding: 3px 10px
+      a
+        font-size: 11px
+        padding: 2px 5px
 
+
+/* Welcome section*/
 .welcome
   display: flex
   justify-content: center
   align-content: center
-  width: 80%
+  width: 90%
   height: auto
   margin: 20px auto
   color: #189AB4
@@ -120,37 +137,27 @@
     img
       width: 100%
       height: auto
-      
+
+/* Contact styles*/
+.contact 
+  width: 80%
+  display: flex
+  justify-content: space-between
+  gap: 10px
+  align-items: center
+  margin: auto auto 20px
+  .contact-details
+    width: 40%
+    background-color: #75E6DA
+    padding: 40px 30px 
+    border-radius: 10px
+    label
+      font-weight: bold
+  .contact-svg 
+    width: 50%
+    img
+      width: 100%
 
 /* Footer styles */
-footer
-  width: 100%
-  height: auto
-  position: relative
-  img
-    width: 100%
-    height: 40vh
-    object-fit: fill
-  .footer-float
-    width: 100%
-    display: flex
-    justify-content: space-between
-    align-items: flex-start
-    position: absolute
-    bottom: 0
-    left: 0
-    a
-      text-decoration: none
-      color: Black
-      font-weight: bold
-    .footer-links
-      display: flex
-      flex-direction: column
-      align-items: flex-start
-      padding: 60px 100px 20px
-      
-    .other-links
-      display: flex
-      flex-direction: column
-      align-items: flex-start
-      padding: 40px 80px
+
+
