--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,12 +19,13 @@
   </div>
 </div>
 
-<div class="intro">
+<div class="introduction">
+  <h1>About me</h1>
+  <div class="intro">
   <div class="intro-svg">
     <img src="assets/multitasking.svg" alt="person-svg">
   </div>
   <div class="intro-matter" id="about-me">
-    <h1>About me</h1>
     <ul>
       <p>
         I am a seasoned <b>Senior Full Stack Java Developer</b> with a rich background spanning 8 years in the software
@@ -39,6 +40,7 @@
       </p>
     </ul>
   </div>
+</div>
 
 </div>
 
