--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -67,6 +67,8 @@
   padding: 15px
   border-radius: 10px
   gap: 10px
+  flex-wrap: nowrap
+  overflow: hidden
   .wel-text
     display: flex
     flex-direction: column
@@ -78,6 +80,8 @@
       color: white
       font-weight: bolder
       font-size: 4vw
+      i
+        color: black
     h2
       font-weight: bold
       font-size: 3vw
@@ -104,6 +108,7 @@
 /* About me section*/
 .introduction
   background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1)
+  
   h1
     background: linear-gradient(to right, #D16BA5 0%, #0089BA 100%)
     font-weight: bold
@@ -155,33 +160,47 @@
 
 /* Contact styles*/
 .contact 
-  width: 80%
+  width: 90%
   display: flex
-  justify-content: space-between
+  justify-content: space-around
   gap: 10px
+  padding: 20px
   align-items: center
   margin: 25px auto 20px
+  background-color: #189AB4
+  border-radius: 10px
   .contact-details
     width: 40%
     background-color: #75E6DA
     padding: 40px 30px 
     border-radius: 10px
     overflow: hidden
+    border: 2px solid black
+    animation: circle-in-hesitate 5s 
     h1
       font-weight: bold
-      font-size: 20px
-    a
-      text-decoration: none
-      color: Black
-      font-weight: bold
-      font-size: 18px
+      font-size: 4vw
     address
       color: Black
-      font-weight: bold
-      font-size: 18px
-    label
-      color: white
-      font-weight: bold
+    .contact-details-items
+      width: 80%
+      padding: 15px
+      text-align: center
+      display: flex
+      justify-content: flex-start
+      margin: auto
+      a, address
+        text-decoration: none
+        color: black
+        svg
+          padding: 5px
+          width: 25px
+          height: 25px
+          background-color: black
+          color: white
+          border-radius: 50%
+          
+
   .contact-svg 
     width: 50%
     img
@@ -229,3 +248,13 @@ footer
       flex-direction: column
       padding: 60px 100px 20px
 
+@keyframes circle-in-hesitate 
+  0% 
+    clip-path: circle(0%)
+  40% 
+    clip-path: circle(40%)
+  100% 
+    clip-path: circle(125%)
+
+[transition-style="in:circle:hesitate"] 
+  animation: 2.5s cubic-bezier(.25, 1, .30, 1) circle-in-hesitate both
