--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -167,11 +167,11 @@
   padding: 20px
   align-items: center
   margin: 25px auto 20px
-  background-color: #189AB4
+  background-color: #cccccc
   border-radius: 10px
   .contact-details
     width: 40%
-    background-color: #75E6DA
+    background-color: 	#eeeeee
     padding: 40px 30px 
     border-radius: 10px
     overflow: hidden
@@ -180,8 +180,6 @@
     h1
       font-weight: bold
       font-size: 4vw
-    address
-      color: Black
     .contact-details-items
       width: 80%
       padding: 15px
@@ -191,11 +189,12 @@
       margin: auto
       a, address
         text-decoration: none
-        color: black
+        font-weight: bold
+        color: #555555
         svg
           padding: 5px
-          width: 25px
-          height: 25px
+          width: 30px
+          height: 30px
           background-color: black
           color: white
           border-radius: 50%
