--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,6 +1,6 @@
 .navbar
   // top: 0
-  // background-color: white
+  // background-color: transparent
   // position: sticky 
   width: 90%
   display: flex
