first proper clean up

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,8 +42,11 @@
     </ul>
   </div>
 </div>
-
 </div>
+
+<!--<div>
+  <h1 id="exp">Experience</h1>
+</div>-->
 
 <div class="contact" id="contact">
   <div class="contact-details">
@@ -71,9 +74,9 @@
   </div>
 </div>
 
-<!-- <footer>
+ <footer>
   <img src="assets/footer.png">
-  <div class="footer-float">:
+  <div class="footer-float">
     <div class="footer-links">
       <a href="https://www.linkedin.com/in/tbolem25/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
           fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
@@ -89,9 +92,8 @@
     <div class="footer-links">
       <a href="#home">Home</a>
       <a href="#about-me">About</a>
-      <a href="#contact">Contact</a>
+      <a href="#exp">Experience</a>
     </div>
   </div>
 
 </footer>
- -->
