update display pic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     <h1>I am a<br> Sr. Full Stack Java Developer</h1>
   </div>
   <div class="welcome-img">
-    <img src="assets/my-pic.jpg" alt="my picture">
+    <img src="assets/my-pic.png" alt="my picture">
   </div>
 </div>
 
