--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,7 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+*
+  margin: 0
+  padding: 0
 body
   margin: 0
   height: 100%
   box-sizing: border-box
   font-family: -apple-system, BlinkMacSystemFont, sans-serif
+  scroll-behavior: smooth
 
