Exp section started

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,16 +20,16 @@
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item" data-bs-dismiss="offcanvas">
+            <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#home">Home</a>
             </li>
-            <li class="nav-item" data-bs-dismiss="offcanvas">
+            <li class="nav-item">
               <a class="nav-link" href="#about-me">About me</a>
             </li>
-            <li class="nav-item" data-bs-dismiss="offcanvas">
+            <li class="nav-item">
               <a class="nav-link" href="#exp">Experience</a>
             </li>
-            <li class="nav-item" data-bs-dismiss="offcanvas">
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
@@ -38,8 +38,6 @@
     </div>
   </nav>
 </div>
-
-
 
 <div class="welcome">
   <div class="wel-text">
@@ -75,8 +73,8 @@
 </div>
 </div>
 
-<!--<div>
-  <h1 id="exp">Experience</h1>
+<!--<div id="exp">
+  <app-resume></app-resume>
 </div>-->
 
 <div class="contact" id="contact">
