--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -15,7 +15,7 @@
     background-clip: text
     color: transparent
     font-family: Jenthill, sans-serif
-    font-size: 2.5vw
+    font-size: 2.7vw
     text-align: center
     margin: auto
   .nav-links
@@ -27,6 +27,7 @@
     background-color: #189AB4
     border-radius: 5px
     padding: 5px 10px
+    margin-top: 8px
     a
       text-decoration: none
       color: #38200E
@@ -218,6 +219,9 @@ footer
       a
         font-weight: bold
         font-size: 16px
+      a:hover
+        font-size: 18px
+
   .welcome
     .welcome-text
       width: 40%
