Exp started shaping

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,9 +73,9 @@
 </div>
 </div>
 
-<!--<div id="exp">
+<div id="exp">
   <app-resume></app-resume>
-</div>-->
+</div>
 
 <div class="contact" id="contact">
   <div class="contact-details">
