Initial Major UI update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,15 @@
 <div class="navbar-mine" id="home">
   <h1 href="#home">Teja Bolem</h1>
   <div class="nav-links">
-    <a href="#home">Home</a>
+    <a href="https://tbport.netlify.app/">Home</a>
     <a href="#about-me">About</a>
     <a href="#exp">Experience</a>
     <a href="#contact">Contact</a>
   </div>
-  <nav class="navbar bg-dar">
+  <nav class="navbar fixed-right">
     <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -21,7 +22,7 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#home">Home</a>
+              <a class="nav-link" aria-current="page" href="https://tbport.netlify.app/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about-me">About me</a>
@@ -59,9 +60,8 @@
     <ul>
       <p>
         I am a seasoned <b>Senior Full Stack Java Developer</b> with a rich background spanning 8 years in the software
-        development
-        industry. My passion lies in crafting robust and scalable solutions that bridge the gap between intricate
-        backend
+        development industry.</p>
+      <p>My passion lies in crafting robust and scalable solutions that bridge the gap between intricate backend
         logic and seamless user experiences.
       </p>
 
@@ -76,10 +76,9 @@
 <div id="exp">
   <app-resume></app-resume>
 </div>
-
-<div class="contact" id="contact">
+<div class="contact" >
   <div class="contact-details">
-    <h1>Contact</h1>
+    <h1 id="contact">Contact</h1>
     <div class="contact-details-items">
       <a href="mailto:tejabolem25@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
         <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671"/>
@@ -119,7 +118,7 @@
         </svg> Github</a>
     </div>
     <div class="footer-links">
-      <a href="#home">Home</a>
+      <a href="https://tbport.netlify.app/">Home</a>
       <a href="#about-me">About</a>
       <a href="#exp">Experience</a>
     </div>
