--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,3 +1,5 @@
+*
+  font-family: -apple-system
 .navbar-mine
   // top: 0
   // background-color: transparent
@@ -18,27 +20,28 @@
     font-size: 2.7vw
     text-align: center
     margin: auto
+    padding: 10px 5px
   .nav-links
     display: flex
     flex-direction: row
     justify-content: space-evenly
     align-content: center
     width: 60%
-    background-color: #189AB4
+    // background-color: #189AB4
     border-radius: 5px
     padding: 5px 10px
     margin-top: 8px
     a
       text-decoration: none
-      color: #38200E
-      padding: 5px 10px
-      border-radius: 5px
+      color: #0E2954
+      padding: 3px 10px
       font-weight: bolder
-      font-size: 18px
+      font-size: 20px
+      border-bottom: white solid 3px
     a:hover
-      background-color: white
+      // background-color: white
       color: #3498db
-      border: 10px
+      border-bottom: #0E2954 solid 3px
 
 /* Welcome section*/
 .welcome
@@ -50,7 +53,7 @@
   margin: 20px auto
   color: #05445E
   background-color: #D4F1F4
-  padding: 15px
+  padding: 35px
   border-radius: 10px
   gap: 10px
   flex-wrap: nowrap
@@ -82,15 +85,15 @@
 
 /* About me section*/
 .introduction
-  background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1)
+  background: linear-gradient(to bottom, #0f0c29, #302b63, #2C5364)
   padding: 20px
   margin: 30px auto 20px
   h1
     color: aliceblue
     font-family: Jenthill, sans-serif
     text-align: center
-    background-color: #05445E
     border-radius: 5px
+    font-size: 4vw
     width: 30vw
     margin: auto
     padding: 10px 5px 0
@@ -112,7 +115,7 @@
       padding: 5px
       border-radius: 10px
       p
-        background: white
+        background-color: #C4DBE0
         border-radius: 8px
         margin: 10px 0 0
         font-size: 20px
@@ -129,27 +132,26 @@
   display: flex
   justify-content: space-around
   gap: 10px
-  padding: 20px
+  padding: 40px
   align-items: center
-  margin: 25px auto 20px
-  background-color: #EFE7BC
+  margin: 25px auto 25px
+  background: linear-gradient(to top, #1D976C, #93F9B9)
   border-radius: 10px
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
   .contact-details
     width: 40%
-    background-color: #74BDCB
+    background-color: #8ADAB2
     padding: 40px 30px
     border-radius: 10px
     overflow: hidden
     border: 2px solid black
     animation: circle-in-hesitate 5s
     h1
-      background-color: #FFA384
-      color: aliceblue
+      color: #EFEBE0
+      font-family: Jenthill, sans-serif
       font-weight: bold
       font-size: 4vw
       border-radius: 5px
-      width: 60%
       padding: 0 15px
       margin: 0 auto 0 0
     .contact-details-items
@@ -212,7 +214,7 @@ footer
     h1
       margin: 5px 5px 10px
       font-size: 8vw
-      padding: 4px 10px 0
+      padding: 4px 10px
     .nav-links
       display: none
     .offcanvas-body
@@ -223,9 +225,11 @@ footer
         font-size: 18px
 
   .welcome
+    margin: 10px auto 20px
+    padding: 15px
     .welcome-text
       width: 40%
-      padding-right: 20px
+      padding-right: 10px
     .welcome-img
       width: 60%
       img
@@ -234,6 +238,9 @@ footer
         border-radius: 50%
         object-fit: cover
   .introduction
+    h1
+      font-size: 7vw
+      width: 100%
     .intro
       display: flex
       flex-direction: column
@@ -246,27 +253,25 @@ footer
         ul
           padding: 0
   .contact
-    width: 80%
     gap: 10px
-    margin: 25px auto 20px
+    margin: 25px auto
     .contact-details
       width: 100%
       h1
-        font-size: 6vw
+        font-size: 7vw
         padding: 5px
         width: 50%
       .contact-details-items
         width: 100%
         display: flex
-        justify-content: flex-start
-        align-items: flex-start
+        flex-direction: column
+        justify-content: center
+        align-items: center
     .contact-svg
       width: 0
 
   footer
     width: 100%
-    // background-image: url("https://images.wallpaperscraft.com/image/single/mountain_rock_stones_1138455_2560x1440.jpg")
-    background-image: url("/assets/footer-phone.png")
     margin: 0
     img
       display: none
@@ -274,7 +279,7 @@ footer
       background-position: center
     .footer-float
       position: relative
-      background-color: #191919
+      background: linear-gradient(to bottom, #000000, #243B55)
       padding: 20px
       .footer-links
         a
