--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,19 +1,31 @@
 <div class="projects">
   <h2>Projects</h2>
-  <div *ngFor="let project of projects">
-    <ng-container *ngTemplateOutlet="projectTemplate; context: {$implicit: project}"></ng-container>
-  </div>
-
-  <ng-template #projectTemplate let-project>
-    <div class="resume">
-      <h3>{{ project.companyName }}</h3>
-        <p><i>{{ project.timePeriod }}</i></p>
-      <h3>{{ project.roleName}}</h3>
-      <ul>
-        <li *ngFor="let point of project.workPoints">{{ point }}</li>
-      </ul>
+  <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
+    <div class="carousel-inner">
+      <div *ngFor="let project of projects; let i = index" class="carousel-item" [class.active]="i === 0">
+        <ng-container *ngTemplateOutlet="projectTemplate; context: {$implicit: project}"></ng-container>
+      </div>
     </div>
-  </ng-template>
+    <ng-template #projectTemplate let-project>
+      <div class="resume">
+        <h3>{{ project.companyName }}</h3>
+        <p><i>{{ project.timePeriod }}</i></p>
+        <h3>{{ project.roleName }}</h3>
+        <ul>
+          <li *ngFor="let point of project.workPoints"><span [innerHTML]="point | boldText"></span></li>
+        </ul>
+      </div>
+    </ng-template>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+            data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+            data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 </div>
-
-
