--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -10,8 +10,6 @@
   align-content: center
   justify-content: space-between
   margin: auto
-  .navbar
-    display: none
   h1
     background: linear-gradient(to right, #30CFD0 0%, #330867 100%)
     background-clip: text
@@ -43,6 +41,10 @@
       color: #3498db
       border-bottom: #0E2954 solid 3px
 
+/* Navbar for the phones*/
+nav
+  display: none
+
 /* Welcome section*/
 .welcome
   display: flex
@@ -52,7 +54,7 @@
   height: auto
   margin: 20px auto
   color: #05445E
-  background-color: #D4F1F4
+  background: linear-gradient(to right, #43C6AC, #191654)
   padding: 35px
   border-radius: 10px
   gap: 10px
@@ -205,27 +207,27 @@ footer
 /* Styles for Phone*/
 @media screen and (max-width: 600px)
   .navbar-mine
-    display: flex
-    flex-direction: row
-    justify-content: space-between
-    width: 100%
-    .navbar
-      display: block
-    h1
-      margin: 5px 5px 10px
-      font-size: 8vw
-      padding: 4px 10px
-    .nav-links
-      display: none
+    display: none
+  nav
+    display: block
+    padding: 5px
+    margin-bottom: 20px
+    background-color: white
+    .container-fluid
+      a, h5
+        background: linear-gradient(to right, #30CFD0 0%, #330867 100%)
+        background-clip: text
+        color: transparent
+        font-family: Jenthill, sans-serif
+        font-size: 6vw
     .offcanvas-body
       a
-        font-weight: bold
-        font-size: 16px
-      a:hover
-        font-size: 18px
-
+        font-family: -apple-system
+        font-size: 4.5vw
+        color: #647D87
+        font-weight: 500
   .welcome
-    margin: 10px auto 20px
+    margin: 70px auto 20px
     padding: 15px
     .welcome-text
       width: 40%
